# porus

./: .travis.yml  AOJ.md  Cargo.toml  README.md  Xargo.toml  azure-pipelines.yml  c.py  requirements.txt
.github/actions-rs/: grcov.yml
.github/workflows/: lint.yml  preview.yml  test.yml
examples/judge.u-aizu.ac.jp/ITP1/: ITP1_3_B.rs
examples/leetcode.com/: 1-two-sum.rs  29-divide-two-integers.rs
porus_macros/: Cargo.toml  common.rs  format.rs  lib.rs  printf.rs
solutions/judge.u-aizu.ac.jp/ALDS1/: ALDS1_1_A.rs  ALDS1_2_A.rs  ALDS1_2_B.rs  ALDS1_2_C.rs  ALDS1_2_D.rs  ALDS1_3_A.rs  ALDS1_3_B.rs  ALDS1_3_C.rs  ALDS1_4_A.rs  ALDS1_4_B.rs  ALDS1_6_B.rs  ALDS1_6_C.rs  ALDS1_9_A.rs  ALDS1_9_B.rs  ALDS1_9_C.rs
solutions/judge.u-aizu.ac.jp/ITP1/: ITP1_10_A.rs  ITP1_10_B.rs  ITP1_1_A.rs  ITP1_1_B.rs  ITP1_1_C.rs  ITP1_1_D.rs  ITP1_2_A.rs  ITP1_2_B.rs  ITP1_2_C.rs  ITP1_2_D.rs  ITP1_3_A.rs  ITP1_3_C.rs  ITP1_3_D.rs  ITP1_4_A.rs  ITP1_4_B.rs  ITP1_4_C.rs  ITP1_4_D.rs  ITP1_5_A.rs  ITP1_5_B.rs  ITP1_5_C.rs  ITP1_5_D.rs  ITP1_6_A.rs  ITP1_7_A.rs  ITP1_8_A.rs  ITP1_8_B.rs  (+1 more)
src/: allocator.rs  block.rs  capacity.rs  chunk.rs  collection.rs  deque.rs  dheap.rs  dlist.rs  file.rs  flist.rs  fmt.rs  heap.rs  io.rs  iter.rs  lib.rs  libc.rs  list.rs  math.rs  pool.rs  prelude.rs  scan.rs  set.rs  stack.rs  stdio.rs  string.rs  sys.rs  utils.rs
src/list/: iter.rs  iter_mut.rs  search.rs  sorting.rs
src/string/: buffer.rs
tests/: drop.rs  pool.rs  prop-tests.rs  trait-tests.rs
tests/arbitrary/: heap.rs  mod.rs  pool.rs  sort.rs  stack.rs
tests/traits/: stack.rs
(+31 files in other folders)
