[package]
name = "porus_macros"
description = "porus macros"
version = "0.0.0"
authors = ["bhuztez <bhuztez@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"

[dependencies.syn]
version = "1.0.86"
features = ["full", "visit-mut"]
