[package]
name = "porus_macros"
description = "porus macros"
version = "0.0.0"
authors = ["bhuztez <bhuztez@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"

[dependencies.syn]
version = "1.0.107"
features = ["full", "visit-mut"]
